--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <header>
     <h1 class="titulo">Grupo 9</h1>
-    <h3 class="subtitulos"><a href="Index.html">Home</a></h3>
+    <h3 class="subtitulos"><a href="index.html">Home</a></h3>
     <h3 class="subtitulos"><a href="Integrantes.html">Integrantes</a></h3>
     <h3 class="subtitulos"><a href="Proyectos.html">Proyectos</a></h3>
 </header>
@@ -24,6 +24,6 @@
 </body>
 <footer>
     <h2>TODOS LOS DERECHOS RESERVADOS</h2>
-    <a href="https://www.uade.edu.ar"><img class="imagenUADE" alt="imagen UADE" src="images/uade.png" width="155" height="106"/></a>
+    <a href="https://www.uade.edu.ar"><img class="imagenUADE" alt="imagen UADE" src="img/uade.png" width="155" height="106"/></a>
 </footer>
 </html>
