--- a/Integrantes.html
+++ b/Integrantes.html
@@ -16,25 +16,25 @@
 <body>
     <div class="container">
     <section>
-        <a href="https://berserklover19.github.io/CVSantinoBertoia/index.html"><img class="imagenperfil" alt="imagen perfil" src="images/Perfil1.png" width="280px" height="331px"/>
+        <a href="https://berserklover19.github.io/CVSantinoBertoia/index.html"><img class="imagenperfil" alt="imagen perfil" src="img/Perfil1.png" width="280px" height="331px"/>
         <h4>Santino Bertoia</h4></a>
     </section>
     <section>
-        <a href="https://nahuelistellato.github.io/dise-oWeb/"><img class="imagenperfil" alt="imagen perfil" src="images/Perfil2.png" width="280px" height="331px"/>
+        <a href="https://nahuelistellato.github.io/dise-oWeb/"><img class="imagenperfil" alt="imagen perfil" src="img/Perfil2.png" width="280px" height="331px"/>
         <h4>Nahuel Stellato</h4></a>
     </section>
     <section>
-        <a href="https://lautaro2427.github.io/cvlautaroguardia/"><img class="imagenperfil" alt="imagen perfil" src="images/Perfil3.png" width="280px" height="331px"/>
+        <a href="https://lautaro2427.github.io/cvlautaroguardia/"><img class="imagenperfil" alt="imagen perfil" src="img/Perfil3.png" width="280px" height="331px"/>
         <h4>Lautaro Guardia</h4></a>
     </section>
     <section>
-        <img class="imagenperfil" alt="imagen perfil" src="images/Perfil4.jpeg" width="280px" height="331px"/>
+        <img class="imagenperfil" alt="imagen perfil" src="img/Perfil4.jpeg" width="280px" height="331px"/>
         <h4>Matias Cristaldo</h4>
     </section>
     </div>
 </body>
 <footer>
     <h2>TODOS LOS DERECHOS RESERVADOS</h2>
-    <a href="https://www.uade.edu.ar"><img class="imagenUADE" alt="imagen UADE" src="images/uade.png" width="155" height="106"/></a>
+    <a href="https://www.uade.edu.ar"><img class="imagenUADE" alt="imagen UADE" src="img/uade.png" width="155" height="106"/></a>
 </footer>
 </html>
