--- a/Proyectos.html
+++ b/Proyectos.html
@@ -12,7 +12,7 @@
         <h2>GRUPO 9</h2>
       </div>
         <nav>
-             <a href="Index.html">Home</a>
+             <a href="index.html">Home</a>
             <a href="Integrantes.html">Integrantes</a>
             <a href="Proyectos.html">Proyectos</a>    
         </nav>
