--- a/Integrantes.html
+++ b/Integrantes.html
@@ -9,7 +9,7 @@
 </head>
 <header>
     <h1>Grupo 9</h1>
-    <h3><a href="Index.html">Home</a></h3>
+    <h3><a href="index.html">Home</a></h3>
     <h3><a href="Integrantes.html">Integrantes</a></h3>
     <h3><a href="Proyectos.html">Proyectos</a></h3>
 </header>
