--- a/Integrantes.html
+++ b/Integrantes.html
@@ -28,8 +28,8 @@
         <h4>Lautaro Guardia</h4></a>
     </section>
     <section>
-        <img class="imagenperfil" alt="imagen perfil" src="img/Perfil4.jpeg" width="280px" height="331px"/>
-        <h4>Matias Cristaldo</h4>
+        <a href="https://tutecristaldo77.github.io/cvmatiascristaldo/"><img class="imagenperfil" alt="imagen perfil" src="img/Perfil4.jpeg" width="280px" height="331px"/>
+        <h4>Matias Cristaldo</h4></a>
     </section>
     </div>
 </body>
