--- a/integrantes.html
+++ b/integrantes.html
@@ -32,7 +32,7 @@
             <a href="https://lautaro2427.github.io/cvlautaroguardia/" target="_blank"><img class="imagenperfil" alt="imagen perfil" src="img\Integrante 3.png" width="280px" height="331px"/></a>
         </section>
         <section>
-            <a href="https://tutecristaldo77.github.io/cvmatiascristaldo/" target="_blank"><img class="imagenperfil" alt="imagen perfil" src="img\Integrante 4.png" width="280px" height="331px"/></a>
+            <a href="https://tutecristaldo77.github.io/CMatiasCristaldo1/" target="_blank"><img class="imagenperfil" alt="imagen perfil" src="img\Integrante 4.png" width="280px" height="331px"/></a>
         </section>
     </main>
     <footer>
