--- a/proyecto.html
+++ b/proyecto.html
@@ -12,7 +12,7 @@
         <h2 class="texto3"><strong>GRUPO 9</strong></h2>
       </div>
         <nav>
-          <a href="home.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="integrantes.html">Integrantes</a>
           <a href="proyecto.html">Proyecto</a>
         </nav>
