--- a/integrantes.html
+++ b/integrantes.html
@@ -15,7 +15,7 @@
             <ul>
                 <li class="navbar-logo">Grupo 9</li>
                 <li class="navbar-icono"><i class="fas fa-bars"></i></li>
-                <li class="navbar-links"><a href="home.html">Home</a></li>
+                <li class="navbar-links"><a href="index.html">Home</a></li>
                 <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
                 <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
             </ul>
