--- a/avances.html
+++ b/avances.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Integrantes Grupo 9</title>
-    <link rel="stylesheet" href="integrantes.css">
+    <title>Avances Grupo 9</title>
+    <link rel="stylesheet" href="avances.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <script type="text/javascript" src="integrantes.js" defer></script>
+    <script type="text/javascript" src="avances.js" defer></script>
     <script src="https://kit.fontawesome.com/e457c69b49.js"></script>
 </head>
 <body>
@@ -23,18 +23,7 @@
         </nav> 
     </header>
     <main>
-        <section>
-            <a href="https://berserklover19.github.io/CVSantinoBertoia/index.html" target="_blank"><img class="imagenperfil" alt="imagen perfil" src="img\Integrante 1.png" width="280px" height="331px"/></a>
-        </section>
-        <section>
-            <a href="https://nahuelistellato.github.io/dise-oWeb/" target="_blank"><img class="imagenperfil" alt="imagen perfil" src="img\Integrante 2.png" width="280px" height="331px"/></a>
-        </section>
-        <section>
-            <a href="https://lautaro2427.github.io/cvlautaroguardia/" target="_blank"><img class="imagenperfil" alt="imagen perfil" src="img\Integrante 3.png" width="280px" height="331px"/></a>
-        </section>
-        <section>
-            <a href="https://tutecristaldo77.github.io/CMatiasCristaldo1/" target="_blank"><img class="imagenperfil" alt="imagen perfil" src="img\Integrante 4.png" width="280px" height="331px"/></a>
-        </section>
+
     </main>
     <footer>
         <p>TODOS LOS DERECHOS RESERVADOS</p>
