--- a/proyecto.html
+++ b/proyecto.html
@@ -15,6 +15,7 @@
           <a href="index.html">Home</a>
           <a href="integrantes.html">Integrantes</a>
           <a href="proyecto.html">Proyecto</a>
+          <a href="avances.html">Avances</a>
         </nav>
     </header>
     <main class="estructura">
