--- a/home.html
+++ b/home.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Grupo 9</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <script type="text/javascript" src="index.js" defer></script>
+    <script type="text/javascript" src="home.js" defer></script>
     <script src="https://kit.fontawesome.com/e457c69b49.js"></script>
 </head>
 <body>
@@ -15,10 +15,10 @@
             <ul>
                 <li class="navbar-logo">Grupo 9</li>
                 <li class="navbar-icono"><i class="fas fa-bars"></i></li>
-                <li class="navbar-links"><a href="index.html">Home</a></li>
+                <li class="navbar-links"><a href="home.html">Home</a></li>
                 <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
                 <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
-                <li class="navbar-links"><a href="avances.html">Avances</a></li>
+                </li>
             </ul>
         </nav> 
     </header>
