--- a/proyecto.html
+++ b/proyecto.html
@@ -1,78 +1,82 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Proyecto Grupo 9</title>
-    <link rel="stylesheet" href="proyecto.css" />
-  </head>
-  <body>
-    <header>
-      <div>
-        <h2 class="texto3"><strong>GRUPO 9</strong></h2>
-      </div>
-        <nav>
-          <a href="index.html">Home</a>
-          <a href="integrantes.html">Integrantes</a>
-          <a href="proyecto.html">Proyecto</a>
-          <a href="avances.html">Avances</a>
-        </nav>
-    </header>
-    <main class="estructura">
-      <h1 class="texto1">OPCIONES DEL PROYECTO</h1>
-      <br />
-      <br />
-      <div class="texto">
-        <p>
-          <strong>Energía Renovable para Todos:</strong> <br> Impulsar programas de electrificación
-          rural mediante energía solar y eólica para llevar electricidad
-          sostenible a comunidades remotas en todo el mundo.
-          <br />
-          <br />
-          <strong>Escuelas Verdes:</strong> <br> Integrar la educación ambiental en el currículo
-          escolar para concienciar a las generaciones jóvenes sobre la
-          importancia de la sustentabilidad.
-          <br />
-          <br />
-          <strong>MARES LIMPIOS:</strong> <br> Implementar políticas y campañas para reducir la
-          contaminación plástica en los océanos, incluyendo la promoción de
-          alternativas sostenibles.
-          <br />
-          <br />
-          <strong>Bosques Sostenibles:</strong> <br> Fomentar la conservación de los bosques y la
-          reforestación, apoyando proyectos de desarrollo sostenible en áreas
-          forestales.
-          <br />
-          <br />
-          <strong>Antártida Limpia:</strong> <br> Crear una campaña global de adopción de icebergs
-          para recaudar fondos y concienciar sobre la importancia de preservar
-          la Antártida y su ecosistema único.
-          <br />
-          <br />
-          <strong>Proyecto Aurora:</strong> <br> Desarrollar un proyecto de energía solar y eólica en
-          la Antártida, llamado "Aurora", para reducir la dependencia de
-          combustibles fósiles y mitigar el cambio climático.
-          <br />
-          <br />
-          <strong>Antártida 3D:</strong> <br> Crear experiencias educativas en realidad virtual que
-          permitan a las personas explorar la Antártida de manera virtual,
-          aprendiendo sobre su importancia y los desafíos ambientales.
-          <br />
-          <br />
-          <strong>Huella Cero:</strong> <br> Desarrollar pautas y estándares estrictos para el turismo
-          en la Antártida, promoviendo visitas sostenibles con cero impacto
-          ambiental.
-          <br />
-          <br />
-          <strong>Reciclaje Polar:</strong> <br> Implementar programas de reciclaje en las bases
-          antárticas para convertir residuos plásticos y otros materiales en
-          recursos valiosos, reduciendo así la contaminación.
-        </p>
-      </div>
-    </main>
-    <footer>
-        <p>TODOS LOS DERECHOS RESERVADOS</p>
-        <a href="https://www.uade.edu.ar" target="_blank"><img src="img\logo.png" alt="Logo UADE"></a>
-    </footer>
-  </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proyectos Grupo 9</title>
+    <link rel="stylesheet" href="proyecto.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    <script type="text/javascript" src="proyecto.js" defer></script>
+    <script src="https://kit.fontawesome.com/e457c69b49.js"></script>
+</head>
+<body>
+  <header>
+      <nav class="navbar">
+          <ul>
+              <li class="navbar-logo">Grupo 9</li>
+              <li class="navbar-icono"><i class="fas fa-bars"></i></li>
+              <li class="navbar-links"><a href="index.html">Home</a></li>
+              <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
+              <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
+              <li class="navbar-links"><a href="avances.html">Avances</a></li>
+          </ul>
+      </nav> 
+  </header>
+  <main class="estructura">
+    <h1 class="texto1">OPCIONES DEL PROYECTO</h1>
+    <br />
+    <br />
+    <div class="texto">
+      <p>
+        <strong>Energía Renovable para Todos:</strong> <br> Impulsar programas de electrificación
+        rural mediante energía solar y eólica para llevar electricidad
+        sostenible a comunidades remotas en todo el mundo.
+        <br />
+        <br />
+        <strong>Escuelas Verdes:</strong> <br> Integrar la educación ambiental en el currículo
+        escolar para concienciar a las generaciones jóvenes sobre la
+        importancia de la sustentabilidad.
+        <br />
+        <br />
+        <strong>MARES LIMPIOS:</strong> <br> Implementar políticas y campañas para reducir la
+        contaminación plástica en los océanos, incluyendo la promoción de
+        alternativas sostenibles.
+        <br />
+        <br />
+        <strong>Bosques Sostenibles:</strong> <br> Fomentar la conservación de los bosques y la
+        reforestación, apoyando proyectos de desarrollo sostenible en áreas
+        forestales.
+        <br />
+        <br />
+        <strong>Antártida Limpia:</strong> <br> Crear una campaña global de adopción de icebergs
+        para recaudar fondos y concienciar sobre la importancia de preservar
+        la Antártida y su ecosistema único.
+        <br />
+        <br />
+        <strong>Proyecto Aurora:</strong> <br> Desarrollar un proyecto de energía solar y eólica en
+        la Antártida, llamado "Aurora", para reducir la dependencia de
+        combustibles fósiles y mitigar el cambio climático.
+        <br />
+        <br />
+        <strong>Antártida 3D:</strong> <br> Crear experiencias educativas en realidad virtual que
+        permitan a las personas explorar la Antártida de manera virtual,
+        aprendiendo sobre su importancia y los desafíos ambientales.
+        <br />
+        <br />
+        <strong>Huella Cero:</strong> <br> Desarrollar pautas y estándares estrictos para el turismo
+        en la Antártida, promoviendo visitas sostenibles con cero impacto
+        ambiental.
+        <br />
+        <br />
+        <strong>Reciclaje Polar:</strong> <br> Implementar programas de reciclaje en las bases
+        antárticas para convertir residuos plásticos y otros materiales en
+        recursos valiosos, reduciendo así la contaminación.
+      </p>
+    </div>
+  </main>
+  <footer>
+      <p>TODOS LOS DERECHOS RESERVADOS</p>
+      <a href="https://www.uade.edu.ar" target="_blank"><img src="img\logo.png" alt="Logo UADE"></a>
+  </footer>
+</body>
 </html>
