--- a/avances.html
+++ b/avances.html
@@ -1,91 +1,127 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avances Grupo 9</title>
-    <link rel="stylesheet" href="avances.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <script type="text/javascript" src="avances.js" defer></script>
-    <script src="https://kit.fontawesome.com/e457c69b49.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Avances Grupo 9</title>
+  <link rel="stylesheet" href="avances.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <script type="text/javascript" src="avances.js" defer></script>
+  <script src="https://kit.fontawesome.com/e457c69b49.js"></script>
 </head>
 <body>
-    <header>
-        <nav class="navbar">
-            <ul>
-                <li class="navbar-logo">Grupo 9</li>
-                <li class="navbar-icono"><i class="fas fa-bars"></i></li>
-                <li class="navbar-links"><a href="index.html">Home</a></li>
-                <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
-                <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
-                <li class="navbar-links"><a href="avances.html">Avances</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <article>
-                <hgroup class="hh1">
-                    <h1><u>Nuestro Proyecto</u></h1>
-                </hgroup>
-                
-                <p id="p1">Proponemos una ONG argentina comprometida con la recaudación de fondos para respaldar la conservación de los bosques nativos del país, en línea con el Objetivo de Desarrollo Sostenible (ODS) "Vida de Ecosistemas Terrestres". A través de nuestro sitio web, nos proponemos proporcionar información detallada sobre las diversas formas en las que nuestra organización contribuirá a la preservación de estos ecosistemas, destacando proyectos específicos y los impactos esperados. Para atraer tráfico a nuestro sitio web, implementaremos estrategias publicitarias en redes sociales, apuntando a construir una audiencia comprometida. Buscamos no solo informar, sino también involucrar a la comunidad en la protección activa del medio ambiente argentino. Nuestro objetivo es generar conciencia, fomentar la participación y, a través de donaciones, lograr un impacto positivo y sostenible en la protección de nuestros valiosos ecosistemas.</p>
-            </article>
-            <article>
-                <hgroup>
-                    <h2><u>Público</u></h2>
-                </hgroup>
-                <p id="P2"> Nuestra web está diseñada para atraer a un público diverso, mayor de edad y sin distinción de género, que comparta un interés común en la conservación ambiental y la protección de los bosques nativos en Argentina. No buscamos limitar la participación según la nacionalidad y aunque se aceptan donaciones de cualquier persona, nuestro enfoque principal es involucrar activamente a ciudadanos argentinos en la protección de estos valiosos ecosistemas. A su vez, reconocemos que cada contribución es valiosa, independientemente del valor de esta. Nuestra plataforma permite donaciones flexibles, donde cada individuo puede aportar la cantidad que desee.</p>
-            </article>
-        </section>
-        <section>
-            <hgroup>
-                <h1 id="h1a"><u>Nombre del Sitio Web</u></h1>
-                <h2>Proyecto Eco-Donar</h2>
-            </hgroup>
-        </section>
-        <section>
-            <h2><u>Dominio</u></h2>
-            <p>Se utilizará el Dominio proveniente de Git Hubs</p>
-        </section>
-        <section>
-            <h2><u>Logo</u></h2>
-            <img src="1000027146.jpg" width="50px" alt="Imagen del logo">
-        </section>
-        <section>
-            <h2><u>Paletas de Colores</u></h2>
-        </section>
-        <section>
-            <h2><u>Descripción del Sitio Web</u></h2>
-            <img src="PhotoRoom-20231026_072451 (1).jpg" width="550px" alt="Imagen del logo">
-        </section>
-        <section>
-            <h2><u>Inicio</u></h2>
-            <p></p>
-            <h2><u>Nuestras Formas de Ayudar</u></h2>
-            <p>Tres secciones secundarias, cada una destacando un bosque nativo y sus desafíos</p>
-            <h2><u>Donar</u></h2>
-            <p>Primera sección: Explicación de la flexibilidad en las donaciones y cómo se utilizarán los fondos. Segunda sección: Testimonio de donadores. Tercera sección: Opciones de pago y formulario de donación.</p>
-        </section>
-        <section>
-            <h2><u>Carpeta del proyecto</u></h2>
-            <p>Accede a la carpeta de nuestro proyecto con el siguiente <a href="">link</a></p>
-            <h2><u>Prototipado</u></h2>
-            <p>Accede al prototipado de nuestra web con el siguiente <a href="">link</a></p>
-            <h2><u>Roles de los integrantes</u></h2>
-            <nav class="menu"> 
-            <ul>
-                <li>Diseñador UX/UI: <p> Santino Bertoia</p></li>
-                <li>Maquetador:</li>
-                <li>Programador:</li>
-                <li>Comunicador Web:</li>
-            </ul>
-            </nav>
-        </section>
-    </main>
-    <footer>
-        <p>TODOS LOS DERECHOS RESERVADOS</p>
-        <a href="https://www.uade.edu.ar" target="_blank"><img src="img\logo.png" alt="Logo UADE"></a>
-    </footer>
+  <header>
+    <nav class="navbar">
+      <ul>
+        <li class="navbar-logo">Grupo 9</li>
+        <li class="navbar-icono"><i class="fas fa-bars"></i></li>
+        <li class="navbar-links"><a href="index.html">Home</a></li>
+        <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
+        <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
+        <li class="navbar-links"><a href="avances.html">Avances</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section class="estructura">
+      <br>
+      <h1 class="texto5">Nuestro Proyecto</h1>
+      <h2 class="texto2">Presentación</h2>
+      <div class="texto">
+        <p>
+          Proponemos una ONG argentina comprometida con la recaudación de fondos para respaldar la conservación de los bosques nativos del país, en línea con el Objetivo de Desarrollo Sostenible (ODS) "Vida de Ecosistemas Terrestres". A través de nuestro sitio web, nos proponemos proporcionar información detallada sobre las diversas formas en las que nuestra organización contribuirá a la preservación de estos ecosistemas, destacando proyectos específicos y los impactos esperados.
+          <br>
+          <br>
+          Para atraer tráfico a nuestro sitio web, implementaremos estrategias publicitarias en redes sociales, apuntando a construir una audiencia comprometida. Buscamos no solo informar, sino también involucrar a la comunidad en la protección activa del medio ambiente argentino. Nuestro objetivo es generar conciencia, fomentar la participación y, a través de donaciones, lograr un impacto positivo y sostenible en la protección de nuestros valiosos ecosistemas.
+        </p>
+      </div>
+      <br>
+      <br>
+      <br>
+      <h3 class="texto2">Público</h3>
+      <div class="texto">
+        <p>Nuestra web está diseñada para atraer a un público diverso, mayor de edad y sin distinción de género, que comparta un interés común en la conservación ambiental y la protección de los bosques nativos en Argentina. No buscamos limitar la participación según la nacionalidad, y aunque se aceptan donaciones de cualquier persona, nuestro enfoque principal es involucrar activamente a ciudadanos argentinos en la preservación de nuestros valiosos ecosistemas. A su vez, reconocemos que cada contribución es valiosa, independientemente del valor de esta. Nuestra plataforma permite donaciones flexibles, donde cada individuo puede aportar la cantidad que desee.</p>
+      </div>
+      <br>
+      <br>
+      <br>
+      <div class="contenedor">
+        <h4 class="texto2">Nombre del sitio web</h4>
+        <p>Proyecto Eco-Donar</p>
+        <br>
+        <br>
+        <h5 class="texto2">Dominio</h5>
+        Se utilizará el dominio proveniente de GitHub Pages.
+        <br>
+        <br>
+        <b class="texto2">Logo</b>
+        <br>
+        <img class="logo" src="img\logo-empresa.png" alt="Logo Empresa">
+        <br>
+        <br>
+        <b class="texto2">Paleta de Colores</b>
+        <br>
+        <br>
+        <img class="paleta" src="img\paleta.png" alt="Paleta de Colores"
+        <br>
+        <br>
+        <br>
+        <br>
+        <b class="texto2">Descripción del sitio web</b>
+        <br>
+        <br>
+        <img class="arbol" src="img\arbol.png" alt="Arbol">
+        <br>
+        <br>
+        <b class="texto6">Inicio</b>
+        <br>
+        Descripción de la organización y su misión.
+        <br>
+        <br>
+        <b class="texto6">Nuestra forma de ayudar</b>
+        <br>
+        Tres secciones secundarias, cada una destacando un bosque nativo y sus desafíos.
+        <br>
+        <br>
+        <b class="texto6">Donar</b>
+        <br>
+        Primera sección: Explicación de la flexibilidad en las donaciones y cómo se utilizarán los fondos.
+        <br>
+        <br>
+        Segunda sección: Testimonios de donadores.
+        <br>
+        <br>
+        Tercera sección: Opciones de pago y formulario de donación.
+        <br>
+        <br>
+        <br>
+        <b class="texto2">Carpeta del Proyecto</b>
+        <br>
+        Accede a la carpeta de nuestro proyecto con el siguiente <a href="https://github.com/BerserkLover19/Proyecto-Eco-Donar" target="_blank"><span>link</span></a>.
+        <br>
+        <br>
+        <b class="texto2">Prototipado</b>
+        <br>
+        Accede al prototipado de nuestra web con el siguiente <a href="https://www.figma.com/file/gXzpIIJiwW7siXbNuD8bb5/Empresa?type=design&node-id=0%3A1&mode=design&t=DlN0rSYBixFM96qi-1" target="_blank"><span>link</span></a>.
+        <br>
+        <br>
+        <b class="texto2">Roles de los integrantes</b>
+        <br>
+        <b>Diseñador UX/UI:</b> Santino Bertoia
+        <br>
+        <b>Maquetador:</b> Santino Bertoia
+        <br>
+        <b>Programador:</b> Santino Bertoia y Lautaro Guardia
+        <br>
+        <b>Comunicador Web:</b>
+        <br>
+        <br>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <p>TODOS LOS DERECHOS RESERVADOS</p>
+    <a href="https://www.uade.edu.ar" target="_blank"><img src="img\logo.png" alt="Logo UADE"></a>
+  </footer>
 </body>
 </html>
