--- a/proyecto.html
+++ b/proyecto.html
@@ -22,56 +22,36 @@
           </ul>
       </nav> 
   </header>
-  <main class="estructura">
-    <h1 class="texto1">OPCIONES DEL PROYECTO</h1>
-    <br />
-    <br />
-    <div class="texto">
-      <p>
-        <strong>Energía Renovable para Todos:</strong> <br> Impulsar programas de electrificación
-        rural mediante energía solar y eólica para llevar electricidad
-        sostenible a comunidades remotas en todo el mundo.
-        <br />
-        <br />
-        <strong>Escuelas Verdes:</strong> <br> Integrar la educación ambiental en el currículo
-        escolar para concienciar a las generaciones jóvenes sobre la
-        importancia de la sustentabilidad.
-        <br />
-        <br />
-        <strong>MARES LIMPIOS:</strong> <br> Implementar políticas y campañas para reducir la
-        contaminación plástica en los océanos, incluyendo la promoción de
-        alternativas sostenibles.
-        <br />
-        <br />
-        <strong>Bosques Sostenibles:</strong> <br> Fomentar la conservación de los bosques y la
-        reforestación, apoyando proyectos de desarrollo sostenible en áreas
-        forestales.
-        <br />
-        <br />
-        <strong>Antártida Limpia:</strong> <br> Crear una campaña global de adopción de icebergs
-        para recaudar fondos y concienciar sobre la importancia de preservar
-        la Antártida y su ecosistema único.
-        <br />
-        <br />
-        <strong>Proyecto Aurora:</strong> <br> Desarrollar un proyecto de energía solar y eólica en
-        la Antártida, llamado "Aurora", para reducir la dependencia de
-        combustibles fósiles y mitigar el cambio climático.
-        <br />
-        <br />
-        <strong>Antártida 3D:</strong> <br> Crear experiencias educativas en realidad virtual que
-        permitan a las personas explorar la Antártida de manera virtual,
-        aprendiendo sobre su importancia y los desafíos ambientales.
-        <br />
-        <br />
-        <strong>Huella Cero:</strong> <br> Desarrollar pautas y estándares estrictos para el turismo
-        en la Antártida, promoviendo visitas sostenibles con cero impacto
-        ambiental.
-        <br />
-        <br />
-        <strong>Reciclaje Polar:</strong> <br> Implementar programas de reciclaje en las bases
-        antárticas para convertir residuos plásticos y otros materiales en
-        recursos valiosos, reduciendo así la contaminación.
-      </p>
+  <main>
+    <h1 class="titulo">Opciones de Proyecto</h1>
+    <div class="contenedor">
+      <p class="subtitulo">Energía Renovable para Todos:</p>
+      <p class="texto">Impulsar programas de electrificación rural mediante energía solar y eólica para llevar electricidad sostenible a comunidades remotas en todo el mundo.</p>
+      <br>
+      <p class="subtitulo">Escuelas Verdes:</p>
+      <p class="texto">Integrar la educación ambiental en el currículo escolar para concienciar a las generaciones jóvenes sobre la importancia de la sustentabilidad.</p>
+      <br>
+      <p class="subtitulo">Mares Limpios</p>
+      <p class="texto">Implementar políticas y campañas para reducir la contaminación plástica en los océanos, incluyendo la promoción de alternativas sostenibles.</p>
+      <br>
+      <p class="subtitulo">Bosques Sostenibles:</p>
+      <p class="texto">Fomentar la conservación de los bosques y la reforestación, apoyando proyectos de desarrollo sostenible en áreas forestales.</p>
+      <br>
+      <p class="subtitulo">Antártida Limpia:</p>
+      <p class="texto">Crear una campaña global de adopción de icebergs para recaudar fondos y concienciar sobre la importancia de preservar la Antártida y su ecosistema único.</p>
+      <br>
+      <p class="subtitulo">Proyecto Aurora:</p>
+      <p class="texto">Desarrollar un proyecto de energía solar y eólica en la Antártida, llamado "Aurora", para reducir la dependencia de combustibles fósiles y mitigar el cambio climático.</p>
+      <br>
+      <p class="subtitulo">Antártida 3D:</p>
+      <p class="texto">Antártida 3D:
+        Crear experiencias educativas en realidad virtual que permitan a las personas explorar la Antártida de manera virtual, aprendiendo sobre su importancia y los desafíos ambientales.</p>
+      <br>
+      <p class="subtitulo">Huella Cero:</p>
+      <p class="texto">Desarrollar pautas y estándares estrictos para el turismo en la Antártida, promoviendo visitas sostenibles con cero impacto ambiental.</p>
+      <br>
+      <p class="subtitulo">Reciclaje Polar:</p>
+      <p class="texto">Implementar programas de reciclaje en las bases antárticas para convertir residuos plásticos y otros materiales en recursos valiosos, reduciendo así la contaminación.</p>
     </div>
   </main>
   <footer>
