--- a/proyecto.html
+++ b/proyecto.html
@@ -44,8 +44,7 @@
       <p class="texto">Desarrollar un proyecto de energía solar y eólica en la Antártida, llamado "Aurora", para reducir la dependencia de combustibles fósiles y mitigar el cambio climático.</p>
       <br>
       <p class="subtitulo">Antártida 3D:</p>
-      <p class="texto">Antártida 3D:
-        Crear experiencias educativas en realidad virtual que permitan a las personas explorar la Antártida de manera virtual, aprendiendo sobre su importancia y los desafíos ambientales.</p>
+      <p class="texto"> Crear experiencias educativas en realidad virtual que permitan a las personas explorar la Antártida de manera virtual, aprendiendo sobre su importancia y los desafíos ambientales.</p>
       <br>
       <p class="subtitulo">Huella Cero:</p>
       <p class="texto">Desarrollar pautas y estándares estrictos para el turismo en la Antártida, promoviendo visitas sostenibles con cero impacto ambiental.</p>
