--- a/avances.html
+++ b/avances.html
@@ -19,6 +19,7 @@
         <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
         <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
         <li class="navbar-links"><a href="avances.html">Avances</a></li>
+        <li class="navbar-links"><a href="proyecto-sitio.html">Sitio del Proyecto</a></li>
       </ul>
     </nav>
   </header>
@@ -56,6 +57,7 @@
         <br>
         <b class="texto2">Logo</b>
         <br>
+        
         <img class="logo" src="img\logo-empresa.png" alt="Logo Empresa">
         <br>
         <br>
@@ -75,24 +77,22 @@
         <br>
         <b class="texto6">Inicio</b>
         <br>
-        Descripción de la organización y su misión.
+        Este sector contiene un texto donde se presenta a la organización y sus objetivos 
         <br>
         <br>
-        <b class="texto6">Nuestra forma de ayudar</b>
+        <b class="texto6">Nuestra ayuda</b>
         <br>
-        Tres secciones secundarias, cada una destacando un bosque nativo y sus desafíos.
+        Esta sección presenta la misión de la organización junto con textos que detallan los bosques respaldados: Selva Misionera, Bosque Andino-Patagónico y Bosque Chaqueño. Se abordan las problemáticas de cada uno, como la deforestación, incendios y desertificación, proponiendo soluciones a través de programas de reforestación, brigadas antiincendios y prácticas agrícolas sostenibles en colaboración con las comunidades locales. 
+        <br>
+        <br>
+        <b class="texto6">Contáctanos</b>
+        <br>
+        Este sector contiene un texto que anima a los usuarios a ponerse en contacto con la organización, junto con un formulario que facilita dicha comunicación.
         <br>
         <br>
         <b class="texto6">Donar</b>
         <br>
-        Primera sección: Explicación de la flexibilidad en las donaciones y cómo se utilizarán los fondos.
-        <br>
-        <br>
-        Segunda sección: Testimonios de donadores.
-        <br>
-        <br>
-        Tercera sección: Opciones de pago y formulario de donación.
-        <br>
+        Esta sección presenta un texto que anima a los usuarios a donar y les explica las distintas variables a la hora de hacerlo, junto con un panel de donaciones para hacer posible esta acción.
         <br>
         <br>
         <b class="texto2">Carpeta del Proyecto</b>
@@ -109,11 +109,11 @@
         <br>
         <b>Diseñador UX/UI:</b> Santino Bertoia
         <br>
-        <b>Maquetador:</b> Santino Bertoia
+        <b>Maquetador:</b> Santino Bertoia, Nahuel Stellato, Lautaro Guardia y Matias Cristaldo  
         <br>
-        <b>Programador:</b> Santino Bertoia y Lautaro Guardia
+        <b>Programador:</b> Santino Bertoia, Nahuel Stellato, Lautaro Guardia y Matias Cristaldo 
         <br>
-        <b>Comunicador Web:</b>
+        <b>Comunicador Web:</b> Santino Bertoia y Lautaro Guardia
         <br>
         <br>
       </div>
