--- a/integrantes.html
+++ b/integrantes.html
@@ -19,6 +19,7 @@
                 <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
                 <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
                 <li class="navbar-links"><a href="avances.html">Avances</a></li>
+                <li class="navbar-links"><a href="proyecto-sitio.html">Sitio del Proyecto</a></li>
             </ul>
         </nav> 
     </header>
