--- a/proyecto-sitio.html
+++ b/proyecto-sitio.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Grupo 9</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Sitio del Proyecto Grupo 9</title>
+    <link rel="stylesheet" href="proyecto-sitio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <script type="text/javascript" src="index.js" defer></script>
+    <script type="text/javascript" src="proyecto-sitio.js" defer></script>
     <script src="https://kit.fontawesome.com/e457c69b49.js"></script>
 </head>
 <body>
@@ -24,9 +24,9 @@
         </nav> 
     </header>
     <main>
-        <p class="texto1">Grupo 9</p>
-        <p class="texto2">Litovicius Patricia Carina <span>|</span> Diseño y Desarrollo Web</p>
-        <p class="texto3">Año 2023 Curso 450946</p>
+        <h1 class="titulo">Proyecto Eco-Donar</h1>
+        <a class="link" href="https://berserklover19.github.io/Proyecto-Eco-Donar/index.html" target="_blank">Sitio del Proyecto</a>
+        <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/wa_3BX9Hk_Q?si=-boAScl4RDbxE3pS" frameborder="0"" allowfullscreen></iframe>
     </main>
     <footer>
         <p>TODOS LOS DERECHOS RESERVADOS</p>
