--- a/proyecto.html
+++ b/proyecto.html
@@ -13,12 +13,13 @@
   <header>
       <nav class="navbar">
           <ul>
-              <li class="navbar-logo">Grupo 9</li>
-              <li class="navbar-icono"><i class="fas fa-bars"></i></li>
-              <li class="navbar-links"><a href="index.html">Home</a></li>
-              <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
-              <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
-              <li class="navbar-links"><a href="avances.html">Avances</a></li>
+            <li class="navbar-logo">Grupo 9</li>
+            <li class="navbar-icono"><i class="fas fa-bars"></i></li>
+            <li class="navbar-links"><a href="index.html">Home</a></li>
+            <li class="navbar-links"><a href="integrantes.html">Integrantes</a></li>
+            <li class="navbar-links"><a href="proyecto.html">Proyecto</a></li>
+            <li class="navbar-links"><a href="avances.html">Avances</a></li>
+            <li class="navbar-links"><a href="proyecto-sitio.html">Sitio del Proyecto</a></li>
           </ul>
       </nav> 
   </header>
@@ -44,7 +45,8 @@
       <p class="texto">Desarrollar un proyecto de energía solar y eólica en la Antártida, llamado "Aurora", para reducir la dependencia de combustibles fósiles y mitigar el cambio climático.</p>
       <br>
       <p class="subtitulo">Antártida 3D:</p>
-      <p class="texto"> Crear experiencias educativas en realidad virtual que permitan a las personas explorar la Antártida de manera virtual, aprendiendo sobre su importancia y los desafíos ambientales.</p>
+      <p class="texto">Antártida 3D:
+        Crear experiencias educativas en realidad virtual que permitan a las personas explorar la Antártida de manera virtual, aprendiendo sobre su importancia y los desafíos ambientales.</p>
       <br>
       <p class="subtitulo">Huella Cero:</p>
       <p class="texto">Desarrollar pautas y estándares estrictos para el turismo en la Antártida, promoviendo visitas sostenibles con cero impacto ambiental.</p>
